Bug 975803 - Workaround a MSVC10 compiler bug. r=luke